[Feature]  Set the the verbose flag from the environment variable ERT_VERBOSE.